# beer_finder

./: .editorconfig  .env_template  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.md  config.py  dev.env_template  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pg_docker-compose.yml  pyproject.toml  run_bot.py  setup.cfg
.github/: dependabot.yml
.github/workflows/: build.yml  linter.yml  test.yml
beers/: admin.py  apps.py  decorators.py  managers.py  models.py  serializers.py  urls.py  views.py
beers/logics/: geo.py  sync_to_db.py  utils.py
beers/managers/: beers.py
beers/migrations/: 0001_initial.py  0002_alter_barbranch_metro.py  0002_alter_beer_managers_alter_bar_name_and_more.py  0003_alter_bar_updated.py  0003_alter_beer_managers_alter_beer_description_and_more.py  0004_bar_updated.py  0005_alter_beer_managers_barbranch_longitude.py  0006_barbranch_latitude.py  0007_alter_bar_options_alter_barbranch_options_and_more.py
beers/models/: bars.py  beers.py
beers/parsers/: base.py  lambic.py  we_all_cidreria.py  we_cidreria.py  we_pub.py
beers/tests/models/: test_models_bar.py  test_models_barbranch.py  test_models_beer.py
beers/tests/views/: test_views_bar_branches.py  test_views_bars.py  test_views_barsbranches.py  test_views_beers.py
beers/views/: bars.py  base.py  beers.py
bot/: apps.py  bot.py  db.py  dispatcher.py  forms.py
bot/handlers/: admin.py  bar_branch_geo.py  bar_branch_list.py  bar_geo.py  bars.py  base.py  beer_filter.py
bot/logics/: bars.py  base.py  beers.py  filter_beers.py  on_startup.py
bot/tests/: test_utils.py
bot/utils/: statistics.py  utils.py
frontend/beer-finder/: package-lock.json  package.json
frontend/beer-finder/src/: index.html  index.js  style.scss
nginx/: nginx.conf
server/: asgi.py  settings.py  urls.py  wsgi.py
