[tool.poetry]
name = "beer_finder"
version = "0.3.5"
description = "The app will help you find the best beer for you and your friends."
authors = ["Stas Cartoon <bycs@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.11"

Django = "4.1.6"
djangorestframework = "3.14.0"
drf-spectacular = "0.25.1"
psycopg2-binary = "2.9.5"
gunicorn = "20.1.0"

aiogram = "2.24"

requests = "2.28.2"
beautifulsoup4 = "4.11.1"

python-dotenv = "0.21.0"

[tool.poetry.dev-dependencies]
# code linters
black = "22.12.0"
isort = "5.11.4"

flake8 = "5.0.4"
flake8-black = "0.3.6"
flake8-builtins = "2.1.0"
flake8-django = "1.1.5"
flake8-isort = "6.0.0"
dotenv-linter = "0.4.0"

mypy = "0.991"
django-stubs = "1.13.1"
djangorestframework-stubs = "1.8.0"

pre-commit = "2.21.0"

# testing code
pytest = "7.2.0"
pytest-django = "4.5.2"
pytest-drf = "1.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
exclude = """
    ('
    |.idea/
    |.venv/
    |.vscode/
    ')
"""
