[tool.poetry]
name = "beer_finder"
version = "0.5.1"
description = "The app will help you find the best beer for you and your friends."
authors = ["Stas Cartoon <bycs@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
# Web
Django = "4.2.1"
djangorestframework = "3.14.0"
psycopg = {extras = ["binary"], version = "3.1.8"}
gunicorn = "20.1.0"
drf-spectacular = "0.26.1"
django-filter = "23.1"
# Bot
python-telegram-bot = { extras = ["socks"], version = "20.2" }
pymongo = "4.3.3"
# Parsing
requests = "2.28.2"
beautifulsoup4 = "4.12.2"
selenium = "4.8.3"
webdriver-manager = "3.8.6"
# Other
python-dotenv = "1.0.0"

[tool.poetry.group.dev.dependencies]
# Formatters
black = "23.3.0"
isort = "5.12.0"
# Linters
flake8 = "5.0.4"
flake8-black = "0.3.6"
flake8-builtins = "2.1.0"
flake8-django = "1.1.5"
flake8-isort = "6.0.0"
dotenv-linter = "0.4.0"

mypy = "1.1.1"
django-stubs = { extras = ["compatible-mypy"], version = "1.16.0" }
djangorestframework-stubs = { extras = ["compatible-mypy"], version = "1.10.0" }
types-requests = "2.28.11.17"

pre-commit = "3.2.2"

# Testing
pytest = "7.3.0"
pytest-django = "4.5.2"
pytest-drf = "1.1.3"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = """
    ('
    |.idea/
    |.venv/
    |.vscode/
    ')
"""
